--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "dependencies": {
     "@jiaminghi/data-view": "^2.7.3",
     "@types/echarts": "^4.4.3",
+    "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "echarts": "^4.6.0",
     "vue": "^2.6.11",
     "vue-awesome": "^4.0.2",
+    "vue-baidu-map": "^0.21.22",
+    "vue-echarts": "^5.0.0-beta.0",
     "vue-router": "^3.1.5",
     "vuex": "^3.1.2"
   },
